kubernetes/mini/core/database/crunchy-postgres/cluster/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: apps-to-pg-postgres
spec:
  endpointSelector:
    matchLabels:
      db.home.arpa/pg: "postgres"
  egress:
    # Connections to master
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: master
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: master
            io.kubernetes.pod.namespace: database
      icmps: [{}]

    # Connections to pgbouncer
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: pgbouncer
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: pgbouncer
            io.kubernetes.pod.namespace: database
      icmps: [{}]
